--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#B862B4</color>
+    <color name="colorPrimaryDark">#60205D</color>
+    <color name="colorAccent">#BC2992</color>
 </resources>
