--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,9 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/baseline_add_24"
         android:contentDescription="Description"
-        />
+        app:backgroundTint="#D7973D7E"
+        app:srcCompat="@drawable/baseline_add_24" />
 
 
 </FrameLayout>
